2006-02-06 Perry
 Synchronizing Slovak translation to English where feasible.
  Src/Languages/Slovak: MergeSlovak.rc
 Synchronizing Swedish translation to English where feasible.
  Src/Languages/Swedish: MergeSwedish.rc

2006-02-05 Perry
 PATCH: [ 1414201 ] Cleanup Merge Line Flags
  Src: LocationView.cpp Merge.dsp MergeDiffDetailView.cpp MergeDoc.cpp
   MergeEditView.cpp MergeEditView.h 
  NEW Src: MergeLineFlags.h

2006-02-05 Kimmo
 PATCH: [ 1424264 ] Use 'Item' instead of file in View-menu
  Src: Merge.rc
  Src/Language: */Merge*.rc

2006-02-05 Perry
 Fix Italian Edit/Options/Editor line selection controls.
  Src/Languages/Italian/MergeItalian.rc
 PATCH: [ 1414904 ] updated italian translation for winmerge 2.5.3.1
  Submitted by A. Decorte
  New updates for selecting current diffs and wrap lines.
  Src/Languages/Italian/MergeItalian.rc

2006-02-05 Kimmo
 BUG: [ 1422257 ] Wrong text in tooltip
  (Dutch translation had wrong shortcut keys in tooltip)
  Src/Languages/Dutch/MergeDutch.rc
 PATCH: [ 1424535 ] Czech Translation
  Submitted by Jan Hryz
  Src/Languages/Czech/MergeCzech.rc

2006-02-04 Perry
 PATCH: [ 1424142 ] Wrap two lwdisp macros in ifndef
  Src/Common: lwdisp.h
 Undo PATCH: [ 1424142 ] Wrap two lwdisp macros in ifndef
  Src/Common: lwdisp.h
 BUG: [ 1383052 ] warning C4005: 'COMPILE_MULTIMON_STUBS' : macro redefinition
  (Wrap multimon def with ifndef
  Src: MainFrm.cpp
 PATCH: [ 1423461 ] Rearrange language select dialog
  Revise patch applied earlier: put Ok on left and Cancel on right.
  (Also fix French dialog which was left out before.)
  Src: Merge.rc
  Src/Languages: */Merge*.rc
 PATCH: [ 1421199 ] Fix plugin menu for when location or diff detail view active
  Src: ChildFrm.cpp ChildFrm.h MainFrm.cpp MainFrm.h MergeDoc.cpp MergeDoc.h
 PATCH: [ 1414904 ] updated italian translation for winmerge 2.5.3.1
  Submitted by A. Decorte
  Src/Languages/Italian: MergeItalian.rc
 PATCH: [ 1423907 ] Fix diffutils hashing of \r
  Src/diffutils: IO.C UTIL.C