@@ -27,14 +27,46 @@
 
 /**
  * @brief File-operation return-statuses
+ * Note that FileLoadResult class has no instance data or methods.
+ * It is only a namespace for static methods & constants.
+ * Everything is public.
  */
-enum
+class FileLoadResult
 {
-	FRESULT_ERROR = 0,
-	FRESULT_OK,
-	FRESULT_OK_IMPURE,
-	FRESULT_BINARY,
-	FRESULT_ERROR_UNPACK
+public:
+// Checking results
+	// main results
+	static bool IsError(DWORD flr) { return Main(flr) == FRESULT_ERROR; }
+	static bool IsOk(DWORD flr) { return Main(flr) == FRESULT_OK; }
+	static bool IsOkImpure(DWORD flr) { return Main(flr) == FRESULT_OK_IMPURE; }
+	static bool IsBinary(DWORD flr) { return Main(flr) == FRESULT_BINARY; }
+	static bool IsErrorUnpack(DWORD flr) { return Main(flr) == FRESULT_ERROR_UNPACK; }
+	// modifiers
+	static bool IsLossy(DWORD flr) { return IsModifier(flr, FRESULT_LOSSY); }
+
+// Assigning results
+	// main results
+	static void SetMainOk(DWORD & flr) { SetMain(flr, FRESULT_OK); }
+	// modifiers
+	static void AddModifier(DWORD & flr, DWORD modifier) { flr = (flr | modifier); }
+
+	// bit manipulations
+	static void SetMain(DWORD & flr, DWORD newmain) { flr = flr & ~FRESULT_MAIN_MASK; flr = flr | newmain; }
+	static DWORD Main(DWORD flr) { return flr & FRESULT_MAIN_MASK; }
+	static bool IsModifier(DWORD flr, DWORD modifier) { return !!(flr & modifier); }
+
+	enum
+	{
+		FRESULT_MAIN_MASK = 0xF,
+		// main results
+		FRESULT_ERROR = 0x0,
+		FRESULT_OK = 0x1,
+		FRESULT_OK_IMPURE = 0x2,
+		FRESULT_BINARY = 0x3,
+		FRESULT_ERROR_UNPACK = 0x4,
+		// modifiers
+		FRESULT_LOSSY = 0x10000,
+	};
 };
 
 /**
