@@ -593,8 +593,11 @@
 #define IDS_DIFFERENT_UNICODINGS        18011
 #define IDS_INVALID_DIRECTORY           18012
 #define IDS_CANNOT_OPEN_BINARYFILE      18013
-#define IDS_LINEDIFF_NODIFF             18016
-#define IDS_LINEDIFF_NODIFF_CAPTION     18017
+#define IDS_LOSSY_TRANSCODING_BOTH      18014
+#define IDS_LOSSY_TRANSCODING_RIGHT     18015
+#define IDS_LOSSY_TRANSCODING_LEFT      18016
+#define IDS_LINEDIFF_NODIFF             18026
+#define IDS_LINEDIFF_NODIFF_CAPTION     18027
 #define IDS_NUM_REPLACED                18032
 #define IDS_EDIT_TEXT_NOT_FOUND         18033
 #define ID_EDITOR_COPY_PATH             18048
